--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,107 @@
+:root {
+    --dark: #374151;
+    --darker: #1f2937;
+    --darkest: #111827;
+    --grey: #6b7280;
+    --pink: #ec4899;
+    --purple: #8b5cf6;
+    --light: #eee;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: "Fira sans", sans-serif;
+}
+
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    min-height: 100vh;
+    background: var(--dark);
+    color: white;
+    /* align-items: center; */
 }
 
-.list {
-    list-style-type: none;
+header {
+    padding: 2rem 1rem;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+header h1 {
+    font-size: 2Srem;
+    font-weight: 300;
+    color: var(--grey);
+    margin-bottom: 1rem;
+}
+
+button {
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.4s;
+    color: crimson;
+}
+
+.filter,
+.form {
+    display: flex;
+    width: 100%;
+}
+
+.filter__input,
+.form__input {
+    flex: 1 1 0%;
+    background-color: var(--darker);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-right: 1rem;
+    color: var(--light);
+    font-size: 1.25rem;
+}
+
+.filter__button,
+.form__submit {
+    color: var(--pink);
+    font-size: 1.25rem;
+    font-weight: 700;
+    background-image: linear-gradient(to right, var(--pink), var(--purple));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.main {
+    flex: 1 1 0%;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+section {
+    padding: 1rem;
+}
+
+.list .list__element {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--darkest);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
 }
 
 .list__element {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex: 1 1 0%;
 }
 
 .list__label--completed {
